fix max height with errors

--- a/catalog/view/theme/default/template/extension/xd_checkout/checkout.twig
+++ b/catalog/view/theme/default/template/extension/xd_checkout/checkout.twig
@@ -1404,6 +1404,7 @@ $('.datetime').datetimepicker();
                                 } else {
                                     field.after(errorDiv);
                                 }
+                                initAccordions(); // Reinitialize accordions to account for new content
                             }
                         }
                         return;
