--- a/catalog/view/theme/default/stylesheet/xd_checkout.css
+++ b/catalog/view/theme/default/stylesheet/xd_checkout.css
@@ -1,5 +1,8 @@
 #xd_checkout-main {
+    margin: 0;
     margin-top: 24px;
+    margin-bottom: 24px;
+    padding: 0;
 }
 
 #xd_checkout-main .form-group {
@@ -124,50 +127,13 @@
 }
 
 #totals-slip {
+    margin: 0;
     padding: 16px;
-    margin-bottom: 16px;
-    background-color: #fff;
+
+    background-color: transparent;
     border: 1px solid;
     border-radius: 16px;
 }
-
-/*
-table.xd_checkout-cart {
-	width: 100%;
-	border-collapse: collapse;
-}
-.xd_checkout-cart thead td {
-	border-bottom: 1px solid #eeeeee;
-	padding: 7px;
-}
-.xd_checkout-cart tbody td {
-	border-bottom: 1px solid #eeeeee;
-	vertical-align: top;
-	padding: 7px;
-}
-.xd_checkout-cart td.image {
-	width: 10%;
-}
-
-.xd_checkout-cart td.name {
-	width: 30%;
-	text-align: left;
-}
-.xd_checkout-cart td.quantity {
-	width: 20%;
-	text-align: left;
-	min-width: 70px !important;
-}
-.xd_checkout-cart td.quantity > img, .xd_checkout-cart td.quantity > a {
-	position: relative;
-	top: 4px;
-	cursor: pointer;
-}
-.xd_checkout-cart td.price1 {
-	text-align: right;
-	width: 20%;
-}
-*/
 
 .xd_checkout-cart,
 .total-list {
@@ -192,6 +158,16 @@ table.xd_checkout-cart {
     padding-top: 0;
 }
 
+.total-list>.xd_checkout-row>.xd_checkout-cell.text-right {
+    font-size: 1.25em;
+    font-weight: 600;
+}
+
+.total-list>.xd_checkout-row:last-child>.xd_checkout-cell {
+    font-size: 1.5em;
+    font-weight: 600;
+}
+
 .total-list>.xd_checkout-row:last-child {
     padding-bottom: 0;
     border-bottom: none;
@@ -202,6 +178,10 @@ table.xd_checkout-cart {
     display: block;
     /* display: flex; */
     align-items: center;
+}
+
+.xd_checkout-cell.text-right {
+    text-align: right;
 }
 
 /* Column widths */
@@ -242,6 +222,9 @@ table.xd_checkout-cart {
 .xd_checkout-cell.total {
     flex: 1;
     justify-content: flex-end;
+
+    font-size: 1.25em;
+    font-weight: 600;
 }
 
 /* Responsive hidden classes */
