--- a/catalog/view/theme/default/stylesheet/xd_checkout/xd_checkout.css
+++ b/catalog/view/theme/default/stylesheet/xd_checkout/xd_checkout.css
@@ -1,8 +1,32 @@
 #xd_checkout-main {
-    margin: 0;
     margin-top: 24px;
     margin-bottom: 24px;
     padding: 0;
+
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#xd_checkout-main>div {
+    margin-top: 0;
+    margin-bottom: 24px;
+
+    flex: 0 0 100%;
+}
+
+@media screen and (min-width: 768px) {
+    #xd_checkout-main>div {
+        flex: 0 0 50%;
+        padding: 0 12px;
+    }
+
+    #xd_checkout-main>div:first-child {
+        order: 2;
+    }
+
+    #xd_checkout-main>div:last-child {
+        order: 1;
+    }
 }
 
 #xd_checkout-main .form-group {
@@ -148,10 +172,23 @@
 }
 
 .xd_checkout-row {
-    display: flex;
-    align-items: center;
     padding: 10px 0;
+
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+
+    gap: 6px;
+
     border-bottom: 1px solid #ddd;
+}
+
+@media (min-width: 1200px) {
+    .xd_checkout-row {
+        flex-direction: row;
+    }
 }
 
 .xd_checkout-row.xd_checkout-header {
@@ -162,6 +199,48 @@
 .xd_checkout-cart>.xd_checkout-row:first-child {
     padding-top: 0;
 }
+
+.xd_checkout-row>.xd_checkout-cell_group {
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: space-between;
+
+    gap: 12px;
+
+    width: 100%;
+}
+
+.xd_checkout-cell_vertical {
+    padding: 6px 0;
+
+    min-width: 60%;
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: space-between;
+    align-items: flex-start;
+
+    gap: 6px;
+}
+
+.total-list>.xd_checkout-row {
+    flex-direction: row;
+}
+
+.xd_checkout-cell_horizontal {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    align-content: center;
+
+    width: 100%;
+}
+
 
 .total-list>.xd_checkout-row>.xd_checkout-cell.text-right {
     font-size: 1.25em;
@@ -179,7 +258,9 @@
 }
 
 .xd_checkout-cell {
-    padding: 0 10px;
+    margin: 0;
+    padding: 0;
+
     display: block;
     /* display: flex; */
     align-items: center;
@@ -191,7 +272,11 @@
 
 /* Column widths */
 .xd_checkout-cell.image {
-    flex: 1;
+    max-width: calc(40% - 12px);
+}
+
+.xd_checkout-cell.image>a {
+    display: block;
 }
 
 .xd_checkout-cell.name {
@@ -217,19 +302,18 @@
 }
 
 .xd_checkout-cell.quantity {
-    flex: 1;
-}
-
-.xd_checkout-cell.price1 {
-    flex: 1;
+    /* flex: 1; */
+    font-size: 1.25em;
 }
 
 .xd_checkout-cell.total {
-    flex: 1;
+    /* flex: 1; */
     justify-content: flex-end;
 
     font-size: 1.25em;
     font-weight: 600;
+
+    min-width: 100px;
 }
 
 /* Responsive hidden classes */
